--- a/app/views/dict_words/home.html.erb
+++ b/app/views/dict_words/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Doogle</h1>
-<input type="text">
-<input type="button" value="Doogle Search">
+<input type="text" id="search-bar">
+<input type="button" id="search-button" value="Doogle Search">
 <ul id="search-results"></ul>
 
 <script type="text/javascript">
