--- a/app/views/dict_words/home.html.erb
+++ b/app/views/dict_words/home.html.erb
@@ -1,5 +1,5 @@
 <h1>Doogle</h1>
-<input type="text" id="search-bar">
+<input type="search" id="search-bar">
 <input type="button" id="search-button" value="Doogle Search">
 <ul id="search-results"></ul>
 
