--- a/app/views/dict_words/home.html.erb
+++ b/app/views/dict_words/home.html.erb
@@ -1,7 +1,4 @@
-<h1>Doogle</h1>
-<input type="search" id="search-bar">
-<input type="button" id="search-button" value="Doogle Search">
-<ul id="search-results"></ul>
+<div id="search-container"></div>
 
 <script type="text/javascript">
   $(function() {
