--- a/app/views/dict_words/home.html.erb
+++ b/app/views/dict_words/home.html.erb
@@ -1,6 +1,9 @@
 <div id="search-container"></div>
 
 <script type="text/javascript">
+    function authToken() {
+        return '<%= form_authenticity_token if protect_against_forgery? -%>';
+    }
   $(function() {
       window.router = new DoogleApp.Routers.WordDefRouter();
       Backbone.history.start();
