--- a/app/assets/javascripts/backbone/templates/word_def.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/word_def.jst.ejs
@@ -1,4 +1,4 @@
 <h1>Doogle</h1>
-<input type="search" name="search-bar">
-<input type="button" id="search-button" value="Doogle Search">
+<input type="search" id="search-bar" />
+<input type="button" id="search-button" value="Doogle Search" />
 <ul id="search-results"></ul>
