--- a/app/assets/javascripts/backbone/templates/word_def.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/word_def.jst.ejs
@@ -1,4 +1,6 @@
-<h1>Doogle</h1>
-<input type="search" id="search-bar" />
-<input type="button" id="search-button" value="Doogle Search" />
-<ul id="search-results"></ul>
+<div id="search-container">
+  <h1>Doogle</h1>
+  <input type="search" id="search-bar" />
+  <input type="button" id="search-button" value="Doogle Search" />
+  <ul id="search-results"></ul>
+</div>
