--- a/app/assets/stylesheets/definitions.scss
+++ b/app/assets/stylesheets/definitions.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#search-container {
+  text-align: center;
+
+  #search-results {
+    width: 800px;
+    margin: 15px auto;
+    text-align: left;
+  }
+}
